# PatternMatchingAlgorithmsTester

./: .gitignore  CMakeLists.txt  PatMatchAlgoTester.pro  README.md  out.csv  out.json
algorithms/: algos.h  consts.cpp  consts.h  executablealgo.cpp  executablealgo.h  simd_defines_i128.h  simd_defines_i64.h
algorithms/developed/: RZk_W2_MMX.cpp  RZk_W2_SIMD3.cpp  RZk_W2_byte.cpp  RZk_W2_byte_single_var.cpp  RZk_W2_pointer.cpp  RZk_W3_SIMD1.cpp  RZk_W3_SIMD2.cpp  RZk_W3_SIMD3.cpp  RZk_W3_SIMD3_range_cmp.cpp  RZk_W3_byte.cpp  RZk_W3_byte_copy.cpp  RZk_W3_pointer.cpp  RZk_W4_SIMD2.cpp  RZk_W4_SIMD3.cpp  RZk_W4_SIMD3_pointer.cpp  RZk_byte.cpp  RZk_w3_simd2_range_cmp.cpp  Z8.cpp  Z8_w2.cpp  Zk.cpp  Zk_shift2.cpp  Zk_w2.cpp  compressed_shifts.cpp  compressed_shifts_w2.cpp  new_algo.cpp  new_algo_k.cpp  test_placeholder.cpp  tmp.cpp
algorithms/imported/: ac.cpp  ag.cpp  akc.cpp  aoso2.cpp  aoso4.cpp  aoso6.cpp  askip.cpp  aut.cpp  bf.cpp  bfs.cpp  blim.cpp  bm.cpp  bmh-sbndm.cpp  bndm.cpp  bndml.cpp  bndmq2.cpp  bndmq4.cpp  bndmq6.cpp  bom.cpp  bom2.cpp  br.cpp  bricks43.cpp  bsdm.cpp  bsdm2.cpp  bsdm3.cpp  bsdm4.cpp  bsdm5.cpp  bsdm6.cpp  bsdm7.cpp  bsdm8.cpp  bww.cpp  bxs.cpp  bxs1.cpp  bxs2.cpp  bxs3.cpp  bxs4.cpp  bxs6.cpp  bxs8.cpp  dbww.cpp  dbww2.cpp  (+120 more)
algorithms/imported/include/: AUTOMATON.cpp  AUTOMATON.h  GRAPH.h  define.h  log2.h  main.h
algorithms/simd_intel/: simd_defines_i128.h  simd_defines_i64.h
main/: algoexecutor.h  main.cpp  mainchart.cpp  mainchart.h  mainchart.ui  mainchart_save.cpp  mainchart_test.cpp  test.cpp  test.h
results/: 01.04.2021_RZ_w3_simd1.md  01.04.2021_RZk_w3_simd1.md  04.04.2021_RZk_w3_simd2.md  14.04.2021_RZk_w4_simd.md  18.04.2021_simd3.md  18.04.2021_simd3_10patintext.md  18.04.2021_simd3_3patintext.md  2021.04.19_all_20patintext.md  2021.04.19_sigma_176_20patintext.md  2021.04.19_sigma_256_10patintext.md  2021.04.19_sigma_256_20patintext.md  25.01.2021_RZ_w2_pointer.md  RZk_run_results.md  readme.md  results.md
results/2021.04.23_snapshot/: alpha128matches10.md  alpha128matches20.md  alpha128matches50.md  alpha192matches10.md  alpha192matches20.md  alpha192matches50.md  alpha256matches10.md  alpha256matches20.md  alpha256matches50.md
results/23-01/: auto_112.md  auto_128.md  auto_16.md  auto_160.md  auto_192.md  auto_2.md  auto_24.md  auto_256.md  auto_32.md  auto_4.md  auto_40.md  auto_56.md  auto_64.md  auto_8.md  auto_80.md
tester/: tester.cpp  tester.h
ui/: controlpanel.cpp  controlpanel.h  progressbar.cpp  progressbar.h
